# letrboxd

./: .gitignore  CNAME  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  daily-update.yml
rust/: Cargo.toml
rust/letrboxd-analysis/: Cargo.toml
rust/letrboxd-analysis/src/: main.rs
rust/letrboxd-benchmarks/: Cargo.toml
rust/letrboxd-benchmarks/benches/: count_solutions.rs
rust/letrboxd-benchmarks/src/: lib.rs
rust/letrboxd-cli/: Cargo.toml
rust/letrboxd-cli/src/: main.rs
rust/letrboxd-wasm/: Cargo.toml
rust/letrboxd-wasm/src/: lib.rs
rust/letters/: Cargo.toml
rust/letters/src/: letter_group.rs  letter_sequence.rs  letter_set.rs  lib.rs  solution.rs
rust/letters/tests/: letter_group.rs  letter_sequence.rs  letter_set.rs  solution.rs  test.rs
rust/todays-puzzle/: Cargo.toml
rust/todays-puzzle/src/: main.rs  puzzle_input.rs
rust/word-list/: Cargo.toml  build.rs
rust/word-list/data/: all_words.crc  all_words.txt
rust/word-list/src/: lib.rs
scripts/: bench.sh  build-cli.sh  build-wasm.sh  clean.sh  format.sh  get-todays-puzzle.sh  lint.sh  test.sh  update.sh
site/: main.js  solver-pool.mjs
site/custom-elements/: a11y-announcer.mjs  letrboxd-input.mjs  solution-list.mjs
site/styles/: letrboxd-input.css  main.css  solution-list.css  variables.css
site/types/: event-data.d.ts  message-data.d.ts  wasm-worker.d.ts
site/workers/: solver.worker.mjs  sorter.worker.mjs
