[package]
name = "todays-puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
ascii = { version = "1.1.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive"] }
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
